[refactor] auth: CORS 설정 리팩토링